--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,14 @@
     <string name="app_name">BiyaHero</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    
+    <!-- String array for main menu list view strings -->
+    <string-array
+        name="main_menu_items">
+        <item>My Routes</item>
+        <item>Traffic Advisories</item>
+        <item>Transit Info</item>
+        <item>View Map</item>
+    </string-array>
 
 </resources>
