Add TransitInfo and ViewMap
- They don't have designs yet, only added for the sake of the screen flow

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,14 +5,25 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_my_routes">My Routes</string>
-    
+    <string name="view_map_placeholder">View Map goes here I think!</string>
+
     <!-- String array for main menu list view strings -->
-    <string-array
-        name="main_menu_items">
+    <string-array name="main_menu_items">
         <item>My Routes</item>
         <item>Traffic Advisories</item>
         <item>Transit Info</item>
         <item>View Map</item>
     </string-array>
+    <string-array name="transport_modes">
+        <item>Bus</item>
+        <item>Jeepney</item>
+        <item>LRT/MRT</item>
+    </string-array>
+
+    <string name="title_activity_view_map">Biyahero</string>
+    <string name="title_activity_transit_info">BiyaHero</string>
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
 
 </resources>
